Add benefits section and mobile layout tweaks

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -9,6 +9,7 @@
     <nav class="header__nav">
         <a href="#about">Sobre mí</a>
         <a href="#media-gallery">Contenido</a>
+        <a href="#benefits">Beneficios</a>
         <a href="#social-links">Comunidad</a>
     </nav>
     <a class="header__cta glow-hover" href="#social-links">Únete al canal</a>
